--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "paypal/rest-api-sdk-php": "^1.14",
         "twilio/sdk": "^6.27"
     },
     "require-dev": {
